# korean-sentiment-analysis-API

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_inference.py  test_model.py
.github/workflows/: ci.yml
app/: config.py  inference.py  main.py  model.py
configs/: model_config.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: .gitkeep
src/: __init__.py
src/models/: __init__.py  config.py  inference.py  model.py
src/monitoring/: __init__.py  logger.py
src/serving/: __init__.py  app.py  router.py  schemas.py
tests/: test_api.py  test_inference.py  test_model.py
